# calendar-app

./: .bzrignore  .gitignore  AUTHORS  AgendaView.qml  AllDayEventComponent.qml  CMakeLists.txt  CalendarChoicePopup.qml  CalendarListButtonDelegate.qml  CalendarView.qml  ColorPickerDialog.qml  ContactChoicePopup.qml  DateLib.js  DayComponent.qml  DayHeaderBackground.qml  DayView.qml  Defines.js  DeleteConfirmationDialog.qml  DiaryView.qml  DiaryViewDelegate.qml  EditEventConfirmationDialog.qml  EditToolbar.qml  EventActions.qml  EventBubble.qml  EventDetails.qml  EventDetailsInfo.qml  EventLayoutHelper.js  EventListModel.qml  EventReminder.qml  EventRepetation.qml  EventRepetationDialog.qml  EventRepetition.qml  EventUtils.qml  EventView.qml  EventViewBase.qml  EventsModel.qml  GlobalEventModel.js  HeaderDateComponent.qml  Jenkinsfile  KeyboardRectangle.qml  LimitLabelDefines.qml  (+86 more)
apparmor/: calendar.json
click/: CMakeLists.txt  apparmor.json  calendar.apparmor  manifest.json.in  push-helper
debian/: calendar-app-autopilot.install  calendar-app.install  changelog  control  copyright  rules  ubuntu-calendar-app-autopilot.install  ubuntu-calendar-app.install
po/: CMakeLists.txt  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  calendar-app.pot  calendar.pot  ckb.po  com.ubuntu.calendar.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  gu.po  he.po  (+46 more)
qml/: AgendaView.qml  AllDayEventComponent.qml  ColorPickerDialog.qml  ContactChoicePopup.qml  DayHeaderBackground.qml  DayView.qml  DefaultHeader.qml  DeleteConfirmationDialog.qml  EventActions.qml  EventBubble.qml  EventDetails.qml  EventListModel.qml  EventRepetition.qml  EventUtils.qml  HeaderSections.qml  LimitLabelModel.qml  MonthComponent.qml  MonthComponentWithEventsDateDelegate.qml  MonthView.qml  MonthWithEventsComponent.qml  NewEvent.qml  NewEventEntryField.qml  NewEventTimePicker.qml  OnlineAccountsDummy.qml  OnlineAccountsHelper.qml  PinchAreaBase.qml  RemindersModel.qml  Scroller.qml  SettingsPage.qml  SimpleDivider.qml  ThemeColors.qml  TimeLineBackground.qml  TimeLineBase.qml  TimeLineBaseComponent.qml  TimeLineHeader.qml  TimeLineTimeScale.qml  TimeSeparator.qml  TitleHeaderSections.qml  ViewHeader.qml  ViewType.js  (+5 more)
qml/CustomPickers/: qmldir
qml/CustomPickers/1.0/: DatePicker.qml  FiveMinutesModel.qml  HoursModel.qml
setup/gui/: com.ubuntu.calendar_calendar.desktop  ubuntu-calendar-app.desktop
snap/: ubuntu-calendar-app.wrapper
tests/autopilot/: CMakeLists.txt
tests/autopilot/address_book_service_testability/: __init__.py  fixture_setup.py  helpers.py
tests/autopilot/address_book_service_testability/data/: backend-store-key-file-data.ini  vcard.vcf
tests/autopilot/calendar_app/: CMakeLists.txt  __init__.py  data.py  emulators.py  emulators.py.THIS  vcard.vcf
tests/autopilot/calendar_app/emulators/: main_view.py  main_window.py  ubuntusdk.py
tests/autopilot/calendar_app/tests/: CMakeLists.txt  __init__.py  test_agendaview.py  test_calendar.py  test_custom_proxy_objects.py  test_data.py  test_dayview.py  test_management.py  test_monthview.py  test_new_event.py  test_weekview.py  test_yearview.py
tests/autopilot/ubuntu_calendar_app/: __init__.py
tests/autopilot/ubuntu_calendar_app/emulators/: main_window.py
tests/autopilot/ubuntu_calendar_app/tests/: __init__.py  test_calendar.py
tests/unittests/: CMakeLists.txt  tst_calendar_canvas.qml  tst_date.qml  tst_event_bubble.qml  tst_event_list_model.qml  tst_new_event.qml
unit-tests/: tst_date.qml
